# gamma-compile-server

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: rt-engine-build.yml
docs/: NPM-SETUP.md
rt-engine/: .gitignore  Cargo.toml  README.md  build.rs
rt-engine/src/: capability.rs  ipc.rs  main.rs  scene.rs
rt-engine/src/backend/: compute_fallback.rs  metal.rs  mod.rs  vulkan.rs
rt-engine/src/render/: metal_path.rs  metalfx.rs  mod.rs
rt-engine/src/shaders/: triangle.metal
scripts/: test-engine-ws.mjs
src/: compile.js  osc-bridge.js  osc-codec.js  rt-engine-host.js  rt-proxy.js  server.js  setup.js
