[package]
name = "gamma-rt-engine"
version = "0.1.0"
edition = "2021"
description = "Native hardware ray-tracing engine for the Gamma Node Editor. Vulkan-RT backend (PC) + Metal-RT backend (Mac); streams H.264 frames to the browser via WebSocket."
authors = ["9LiveZZZ-Git"]
license = "MIT"
repository = "https://github.com/9LiveZZZ-Git/gamma-compile-server"

[[bin]]
name = "gamma-rt-engine"
path = "src/main.rs"

# Sprint 7.5.6.a part 1 -- minimal dep set. Just what's needed for
# the capability probe + WebSocket handshake. Backend-specific deps
# (ash, gpu-allocator, metal, objc2-*) land in part 2 when they're
# actually used by code; pulling them in now slows the build with
# zero benefit + risks version-pinning mistakes (which is what
# caused the v0.1.0 first build to fail).

[dependencies]
# Async runtime: tokio for I/O multiplexing
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "sync", "time"] }

# Logging
log = "0.4"
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Math (matrices, vectors, quaternions) -- used by scene.rs
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# Safe POD casting for GPU buffers -- used by scene.rs
bytemuck = { version = "1.18", features = ["derive"] }

# JSON scene-state serialization (control plane with the Node host)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket -- engine binds its own port; Node side connects + proxies
# from the browser-facing /rt endpoint.
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Anyhow for ergonomic error propagation
anyhow = "1"

# ── Deferred to §5.6.a part 2 (when actually used by code) ──
#
# [target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
# ash = { version = "0.38", features = ["loaded", "debug"] }
# ash-window = "0.13"
# gpu-allocator = { version = "0.27", features = ["vulkan"], default-features = false }
#
# [target.'cfg(target_os = "macos")'.dependencies]
# metal = "0.29"
# objc2 = "0.5"
# objc2-foundation = "0.3"
# objc2-metal = "0.3"
# objc2-metal-performance-shaders = "0.3"
