[package]
name = "gamma-rt-engine"
version = "0.1.0"
edition = "2021"
description = "Native hardware ray-tracing engine for the Gamma Node Editor. Vulkan-RT backend (PC) + Metal-RT backend (Mac); streams H.264 frames to the browser via WebSocket."
authors = ["9LiveZZZ-Git"]
license = "MIT"
repository = "https://github.com/9LiveZZZ-Git/gamma-compile-server"

[[bin]]
name = "gamma-rt-engine"
path = "src/main.rs"

# Sprint 7.5.6.a part 1 -- minimal dep set. Just what's needed for
# the capability probe + WebSocket handshake. Backend-specific deps
# (ash, gpu-allocator, metal, objc2-*) land in part 2 when they're
# actually used by code; pulling them in now slows the build with
# zero benefit + risks version-pinning mistakes (which is what
# caused the v0.1.0 first build to fail).

[dependencies]
# Async runtime: tokio for I/O multiplexing
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "sync", "time"] }

# Logging
log = "0.4"
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Math (matrices, vectors, quaternions) -- used by scene.rs
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# Safe POD casting for GPU buffers -- used by scene.rs
bytemuck = { version = "1.18", features = ["derive"] }

# JSON scene-state serialization (control plane with the Node host)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket -- engine binds its own port; Node side connects + proxies
# from the browser-facing /rt endpoint.
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Anyhow for ergonomic error propagation
anyhow = "1"

# Image I/O for the `--render-test` PNG output path. PNG-only to
# keep the dep tree small; other formats land when we need them
# (e.g. EXR for HDR output, BMP for fastest write).
image = { version = "0.25", default-features = false, features = ["png"] }

# ── Mac probe (sprint 7.5.6.a part 2a) ──
# Real MTLDevice queries replace the capability stub. Just `metal`
# itself for now; objc2-* gets added back when we need MPS or
# fine-grained Obj-C method access in §5.6.a part 2b (rendering).
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"

# ── PC backend (deferred to §5.6.b when the Vulkan backend lands) ──
#
# [target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
# ash = { version = "0.38", features = ["loaded", "debug"] }
# ash-window = "0.13"
# gpu-allocator = { version = "0.27", features = ["vulkan"], default-features = false }
